feat: add dynamic menu linkage
